--- a/DeliDash/Base.lproj/Main.storyboard
+++ b/DeliDash/Base.lproj/Main.storyboard
@@ -37,56 +37,46 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="955-BJ-pxS">
-                                <rect key="frame" x="0.0" y="171" width="320" height="137"/>
+                                <rect key="frame" x="0.0" y="171.5" width="320" height="137"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DO3-GZ-7g0">
-                                        <rect key="frame" x="20" y="95" width="280" height="34"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DO3-GZ-7g0">
+                                        <rect key="frame" x="20" y="94" width="280" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="47u-gf-2PY"/>
                                         </constraints>
                                         <state key="normal" title="Ready To Order">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <variation key="heightClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="94" width="280" height="34"/>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="94" width="440" height="34"/>
+                                        </variation>
                                         <connections>
                                             <segue destination="a58-8H-Me9" kind="show" id="1vA-yq-brS"/>
                                         </connections>
                                     </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBG-Zt-Eap">
-                                        <rect key="frame" x="20" y="19" width="280" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="EIi-Xe-ECa"/>
-                                            <constraint firstAttribute="width" secondItem="DBG-Zt-Eap" secondAttribute="height" multiplier="113:25" id="kUo-n6-IPn"/>
-                                        </constraints>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBG-Zt-Eap">
+                                        <rect key="frame" x="20" y="18" width="280" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="kUo-n6-IPn"/>
-                                            </mask>
+                                        <variation key="heightClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="18" width="280" height="30"/>
                                         </variation>
-                                        <variation key="widthClass=compact">
-                                            <mask key="constraints">
-                                                <include reference="kUo-n6-IPn"/>
-                                            </mask>
+                                        <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="18" width="440" height="30"/>
                                         </variation>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Student ID" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="rMY-Tg-koa">
-                                        <rect key="frame" x="20" y="57" width="280" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="rMY-Tg-koa" secondAttribute="height" multiplier="113:25" id="Mn4-A6-zkq"/>
-                                            <constraint firstAttribute="height" constant="30" id="jqt-gz-QoP"/>
-                                        </constraints>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Student ID" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="rMY-Tg-koa">
+                                        <rect key="frame" x="20" y="56" width="280" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="Mn4-A6-zkq"/>
-                                            </mask>
+                                        <variation key="heightClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="56" width="280" height="30"/>
                                         </variation>
-                                        <variation key="widthClass=compact">
-                                            <mask key="constraints">
-                                                <include reference="Mn4-A6-zkq"/>
-                                            </mask>
+                                        <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                            <rect key="frame" x="20" y="56" width="440" height="30"/>
                                         </variation>
                                     </textField>
                                 </subviews>
@@ -115,7 +105,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deli Dash" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHI-oS-asM">
-                                <rect key="frame" x="0.0" y="68" width="320" height="85"/>
+                                <rect key="frame" x="0.0" y="68" width="320" height="86"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hHI-oS-asM" secondAttribute="height" multiplier="100:47" id="xSw-YI-Gn4"/>
                                 </constraints>
@@ -548,7 +538,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SR0-M5-MpW">
-                                <rect key="frame" x="132" y="602" width="110" height="30"/>
+                                <rect key="frame" x="133" y="602" width="110" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qV9-Dm-XYk">
                                         <rect key="frame" x="0.0" y="0.0" width="66" height="30"/>
