--- a/DeliDash/Salad.storyboard
+++ b/DeliDash/Salad.storyboard
@@ -119,8 +119,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aCq-zr-plL">
-                                <rect key="frame" x="244" y="481" width="110" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aCq-zr-plL">
+                                <rect key="frame" x="245" y="481" width="110" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eay-3L-nSh">
                                         <rect key="frame" x="0.0" y="0.0" width="66" height="30"/>
