--- a/DeliDash/Base.lproj/Main.storyboard
+++ b/DeliDash/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,48 +19,125 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dash!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHI-oS-asM">
-                                <rect key="frame" x="249" y="214" width="100" height="47"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="0.0" height="0.0"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Deli" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kM1-37-CwU">
-                                <rect key="frame" x="264" y="150" width="71" height="56"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deli Dash" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="kM1-37-CwU">
+                                <rect key="frame" x="0.0" y="56" width="600" height="150"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="80"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="128" y="166" width="66" height="53"/>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBG-Zt-Eap">
-                                <rect key="frame" x="30" y="285" width="540" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGL-vr-0Ui">
-                                <rect key="frame" x="30" y="335" width="540" height="30"/>
-                                <state key="normal" title="Ready To Order"/>
-                                <connections>
-                                    <segue destination="DP2-vY-VDt" kind="show" id="fsh-K9-mMu"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bhLogo" translatesAutoresizingMaskIntoConstraints="NO" id="OSg-vW-IZK">
-                                <rect key="frame" x="161" y="20" width="277" height="114"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fy5-rY-HPS">
+                                <rect key="frame" x="0.0" y="206" width="600" height="394"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBG-Zt-Eap">
+                                        <rect key="frame" x="30" y="20" width="540" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="jVR-c8-kl8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Student ID" textAlignment="center" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="eiD-Ct-M0N">
+                                        <rect key="frame" x="30" y="58" width="540" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="1Vz-XT-xua"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGL-vr-0Ui">
+                                        <rect key="frame" x="30" y="96" width="540" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="F40-F3-qoc"/>
+                                        </constraints>
+                                        <state key="normal" title="Ready To Order">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="F40-F3-qoc"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <segue destination="DP2-vY-VDt" kind="show" id="fsh-K9-mMu"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.032312311230000001" green="0.29270231720000001" blue="0.52107477189999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="eiD-Ct-M0N" secondAttribute="trailing" constant="30" id="1DU-1k-1mW"/>
+                                    <constraint firstAttribute="trailing" secondItem="KGL-vr-0Ui" secondAttribute="trailing" constant="30" id="7RV-pO-h6p"/>
+                                    <constraint firstItem="KGL-vr-0Ui" firstAttribute="top" secondItem="DBG-Zt-Eap" secondAttribute="bottom" constant="15" id="C8p-Cu-Boz"/>
+                                    <constraint firstItem="eiD-Ct-M0N" firstAttribute="top" secondItem="DBG-Zt-Eap" secondAttribute="bottom" constant="8" id="CjV-oT-ZKJ"/>
+                                    <constraint firstItem="KGL-vr-0Ui" firstAttribute="leading" secondItem="Fy5-rY-HPS" secondAttribute="leading" constant="30" id="GPQ-Zg-z6B"/>
+                                    <constraint firstItem="DBG-Zt-Eap" firstAttribute="leading" secondItem="Fy5-rY-HPS" secondAttribute="leading" constant="30" id="NR7-Ha-55e"/>
+                                    <constraint firstItem="DBG-Zt-Eap" firstAttribute="top" secondItem="Fy5-rY-HPS" secondAttribute="top" constant="20" id="XiB-nC-ihM"/>
+                                    <constraint firstAttribute="trailing" secondItem="DBG-Zt-Eap" secondAttribute="trailing" constant="30" id="dhb-Q2-jXo"/>
+                                    <constraint firstItem="KGL-vr-0Ui" firstAttribute="top" secondItem="eiD-Ct-M0N" secondAttribute="bottom" constant="8" id="eHl-yE-qw9"/>
+                                    <constraint firstItem="eiD-Ct-M0N" firstAttribute="leading" secondItem="Fy5-rY-HPS" secondAttribute="leading" constant="30" id="gmK-fY-blH"/>
+                                    <constraint firstItem="KGL-vr-0Ui" firstAttribute="leading" secondItem="Fy5-rY-HPS" secondAttribute="leading" constant="30" id="iSd-tD-JBN"/>
+                                    <constraint firstAttribute="trailing" secondItem="KGL-vr-0Ui" secondAttribute="trailing" constant="30" id="kcc-XV-7CV"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C8p-Cu-Boz"/>
+                                        <exclude reference="iSd-tD-JBN"/>
+                                        <exclude reference="kcc-XV-7CV"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chatham High School" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7od-HX-tfu">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="56"/>
+                                <color key="backgroundColor" red="0.032312311230000001" green="0.29270231720000001" blue="0.52107477189999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="h5U-X7-zwH">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="77"/>
+                                    </constraint>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KGL-vr-0Ui" firstAttribute="top" secondItem="DBG-Zt-Eap" secondAttribute="bottom" constant="20" id="Fv4-25-7iv"/>
-                            <constraint firstItem="DBG-Zt-Eap" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IsW-Oh-feK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="DBG-Zt-Eap" secondAttribute="trailing" constant="10" id="Kgb-0d-hAg"/>
-                            <constraint firstItem="KGL-vr-0Ui" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="TOX-nF-phn"/>
-                            <constraint firstItem="DBG-Zt-Eap" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="XS0-Ps-Ysf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="KGL-vr-0Ui" secondAttribute="trailing" constant="10" id="nMP-fU-5hB"/>
-                            <constraint firstItem="DBG-Zt-Eap" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="pRa-BC-4aO"/>
+                            <constraint firstItem="Fy5-rY-HPS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2JB-hx-xFv"/>
+                            <constraint firstItem="kM1-37-CwU" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="CA2-aZ-dkS"/>
+                            <constraint firstItem="7od-HX-tfu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="D2N-tM-MXK">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-20"/>
+                            </constraint>
+                            <constraint firstAttribute="leadingMargin" secondItem="7od-HX-tfu" secondAttribute="leading" constant="20" id="Dwv-bg-eHL"/>
+                            <constraint firstItem="Fy5-rY-HPS" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Jfg-eU-HI4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kM1-37-CwU" secondAttribute="trailing" id="Kgp-rW-nOJ"/>
+                            <constraint firstItem="kM1-37-CwU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rc3-ZL-MZM"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="kM1-37-CwU" secondAttribute="leading" id="ZUa-YR-pQr"/>
+                            <constraint firstItem="kM1-37-CwU" firstAttribute="top" secondItem="7od-HX-tfu" secondAttribute="bottom" id="dWi-I2-8rP">
+                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="7od-HX-tfu" secondAttribute="trailing" constant="-20" id="fVn-Mx-fzW">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-20"/>
+                            </constraint>
+                            <constraint firstItem="kM1-37-CwU" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:4" id="tw4-Pu-Hbt"/>
+                            <constraint firstItem="Fy5-rY-HPS" firstAttribute="top" secondItem="kM1-37-CwU" secondAttribute="bottom" id="wW8-h4-rGY"/>
+                            <constraint firstItem="Fy5-rY-HPS" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="xEY-5E-nzd"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Kgp-rW-nOJ"/>
+                                <exclude reference="ZUa-YR-pQr"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="CA2-aZ-dkS"/>
+                                <include reference="Kgp-rW-nOJ"/>
+                                <include reference="ZUa-YR-pQr"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="nameBox" destination="DBG-Zt-Eap" id="cak-L7-tz1"/>
@@ -926,7 +1004,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bhLogo" width="277" height="154"/>
         <image name="saladDiagram" width="173" height="375"/>
         <image name="sandwichDiagram" width="278" height="800"/>
     </resources>
