Added Saving Function

--- a/DeliDash/Base.lproj/Main.storyboard
+++ b/DeliDash/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Sandwich Or Salad?-->
         <scene sceneID="irR-cq-HK1">
             <objects>
-                <viewController storyboardIdentifier="Choose" id="a58-8H-Me9" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Choose" id="a58-8H-Me9" customClass="ChoiceViewController" customModule="DeliDash" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6TJ-UO-pJY"/>
                         <viewControllerLayoutGuide type="bottom" id="Ar1-gC-28V"/>
@@ -39,9 +39,18 @@
                                     <segue destination="ZfZ-fm-sHm" kind="show" id="D37-Og-VDK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldG-DC-Aux">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Saved Order"/>
+                                <connections>
+                                    <action selector="loadOrder:" destination="a58-8H-Me9" eventType="touchUpInside" id="e4e-og-wFo"/>
+                                    <segue destination="PRL-i0-dju" kind="show" id="9Oo-8l-uyc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="ldG-DC-Aux" firstAttribute="centerX" secondItem="Gxv-lX-60p" secondAttribute="centerX" id="26v-e0-3CE"/>
                             <constraint firstItem="dyi-I3-VYG" firstAttribute="leading" secondItem="Gxv-lX-60p" secondAttribute="leadingMargin" constant="-4" id="4sN-Qg-WDe"/>
                             <constraint firstItem="kAn-ja-udf" firstAttribute="centerX" secondItem="dyi-I3-VYG" secondAttribute="centerX" id="8Ea-Uh-85x"/>
                             <constraint firstItem="Ar1-gC-28V" firstAttribute="top" secondItem="kAn-ja-udf" secondAttribute="bottom" constant="67" id="IOC-Bo-ZoN"/>
@@ -59,11 +68,26 @@
                             <constraint firstItem="dyi-I3-VYG" firstAttribute="top" secondItem="6TJ-UO-pJY" secondAttribute="bottom" constant="100" id="sff-ks-yW7"/>
                             <constraint firstItem="dyi-I3-VYG" firstAttribute="centerY" secondItem="Gxv-lX-60p" secondAttribute="centerY" id="uen-er-F1t"/>
                             <constraint firstItem="75g-Vf-nnB" firstAttribute="centerY" secondItem="Gxv-lX-60p" secondAttribute="centerY" id="wIu-6D-e9r"/>
+                            <constraint firstItem="Ar1-gC-28V" firstAttribute="top" secondItem="ldG-DC-Aux" secondAttribute="bottom" constant="20" id="zN7-ga-tpE"/>
                         </constraints>
                         <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="ldG-DC-Aux"/>
+                            </mask>
                             <mask key="constraints">
+                                <exclude reference="26v-e0-3CE"/>
                                 <exclude reference="sff-ks-yW7"/>
                                 <exclude reference="MUR-ea-khf"/>
+                                <exclude reference="zN7-ga-tpE"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="ldG-DC-Aux"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="26v-e0-3CE"/>
+                                <include reference="zN7-ga-tpE"/>
                             </mask>
                         </variation>
                     </view>
@@ -75,18 +99,26 @@
             </objects>
             <point key="canvasLocation" x="1362" y="459"/>
         </scene>
+        <!--Checkout-->
+        <scene sceneID="fWi-kz-Wq5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="Checkout" id="PRL-i0-dju" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e1I-Qg-RSf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1362" y="804"/>
+        </scene>
         <!--Choose-->
         <scene sceneID="PmP-xG-TM3">
             <objects>
                 <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="Choose" id="Wv2-02-v85" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bpG-ky-aG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1198" y="1953"/>
+            <point key="canvasLocation" x="1107" y="2580"/>
         </scene>
         <!--CheckOut-->
         <scene sceneID="5Ul-ED-4KN">
             <objects>
-                <viewController id="AKN-u2-7ar" customClass="CheckoutViewController" customModule="DeliDash" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Checkout" id="AKN-u2-7ar" customClass="CheckoutViewController" customModule="DeliDash" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rY1-09-ZPr"/>
                         <viewControllerLayoutGuide type="bottom" id="fl6-Gz-joD"/>
@@ -100,9 +132,41 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="37" y="75" width="247" height="331"/>
+                                </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fy1-ht-gnH">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Save Order"/>
+                                <connections>
+                                    <action selector="saveOrder:" destination="AKN-u2-7ar" eventType="touchUpInside" id="wUh-Pq-kgM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Fy1-ht-gnH" firstAttribute="centerX" secondItem="CIe-ZY-vsc" secondAttribute="centerX" id="Yd2-60-t47"/>
+                            <constraint firstItem="fl6-Gz-joD" firstAttribute="top" secondItem="Fy1-ht-gnH" secondAttribute="bottom" constant="20" id="t3X-RS-YGt"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="Fy1-ht-gnH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="t3X-RS-YGt"/>
+                                <exclude reference="Yd2-60-t47"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Fy1-ht-gnH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="t3X-RS-YGt"/>
+                                <include reference="Yd2-60-t47"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="CheckOut" id="4qY-Zj-F8Q">
                         <barButtonItem key="leftBarButtonItem" title="Start Over" id="HQ3-aU-mPi">
@@ -122,7 +186,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Kl-cM-LYF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1378" y="2270"/>
+            <point key="canvasLocation" x="1362" y="1887"/>
         </scene>
         <!--Salad-->
         <scene sceneID="62H-CE-HVt">
